example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app: nginx
  ports:
  - name: web
    port: 80
    protocol: TCP
